--- a/index.html
+++ b/index.html
@@ -1,26 +1,68 @@
+
 <!DOCTYPE html>
 <html lang="fa">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>دیوار ساده</title>
+    <title>وبسایت شبیه دیوار</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>وبسایت آگهی</h1>
+        <h1>وبسایت شبیه دیوار</h1>
     </header>
-    <div class="container">
-        <div class="ad">
-            <h2>فروش موبایل</h2>
-            <p>قیمت: 5,000,000 تومان</p>
-            <p>محل: تهران</p>
-        </div>
-        <div class="ad">
-            <h2>اجاره آپارتمان</h2>
-            <p>قیمت: 10,000,000 تومان</p>
-            <p>محل: مشهد</p>
-        </div>
-    </div>
+    <main>
+        <form>
+            <label for="title">عنوان آگهی:</label>
+            <input type="text" id="title" name="title" required><br><br>
+
+            <label for="description">توضیحات:</label>
+            <textarea id="description" name="description" required></textarea><br><br>
+
+            <label for="price">قیمت:</label>
+            <input type="number" id="price" name="price" required><br><br>
+
+            <label for="provinces">انتخاب ولایت:</label>
+            <select id="provinces" name="provinces">
+                <option value="badakhshan">بدخشان</option>
+                <option value="badghis">بادغیس</option>
+                <option value="baghlan">بغلان</option>
+                <option value="balkh">بلخ</option>
+                <option value="bamyan">بامیان</option>
+                <option value="daykundi">دایکندی</option>
+                <option value="farah">فراه</option>
+                <option value="faryab">فاریاب</option>
+                <option value="ghazni">غزنی</option>
+                <option value="ghor">غور</option>
+                <option value="helmand">هلمند</option>
+                <option value="herat">هرات</option>
+                <option value="jawzjan">جوزجان</option>
+                <option value="kabul">کابل</option>
+                <option value="kandahar">قندهار</option>
+                <option value="kapisa">کاپیسا</option>
+                <option value="khost">خوست</option>
+                <option value="kunar">کنر</option>
+                <option value="kunduz">کندز</option>
+                <option value="laghman">لغمان</option>
+                <option value="logar">لوگر</option>
+                <option value="nangarhar">ننگرهار</option>
+                <option value="nimruz">نیمروز</option>
+                <option value="nuristan">نورستان</option>
+                <option value="panjshir">پنجشیر</option>
+                <option value="parwan">پروان</option>
+                <option value="samangan">سمنگان</option>
+                <option value="sar-e-pol">سرپل</option>
+                <option value="takhar">تخار</option>
+                <option value="urozgan">ارزگان</option>
+                <option value="wardak">وردک</option>
+                <option value="zabul">زابل</option>
+            </select><br><br>
+
+            <button type="submit">ارسال آگهی</button>
+        </form>
+    </main>
+    <footer>
+        <p>تمام حقوق محفوظ است &copy; 2024</p>
+    </footer>
 </body>
 </html>
