--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
             <label for="provinces">انتخاب ولایت:</label>
             <select id="provinces" name="provinces">
+                 <option value="badakhshan">عمومی</option>
                 <option value="badakhshan">بدخشان</option>
                 <option value="badghis">بادغیس</option>
                 <option value="baghlan">بغلان</option>
