--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </form>
     </main>
     <footer>
-        <p>تمام حقوق محفوظ است &copy; 2024</p>
+        <p>تمام حقوق محفوظ است »Kihan&copy; 2024</p>
     </footer>
 </body>
 </html>
