--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>وبسایت شبیه دیوار</h1>
+        <h1> وبسایت دیوار افغانستان </h1>
     </header>
     <main>
         <form>
