--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>انتخاب ولایت</title>
     <link rel="stylesheet" href="style.css"> <!-- لینک به فایل CSS -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
