--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>انتخاب ولایت</title>
     <link rel="stylesheet" href="style.css"> <!-- لینک به فایل CSS -->
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -22,7 +21,7 @@
             <option value="kandahar">کندهار</option>
             <option value="badakhshan">بدخشان</option>
             <option value="logar">لوگر</option>
-            <!-- می‌توانید ولایت‌های بیشتری اضافه کنید -->
+            <!-- سایر ولایت‌ها را اضافه کنید -->
         </select>
     </div>
 
