--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
                         <option value="takhar">تخار</option>
                         <!-- سایر ولایات -->
                     </select>
+                    <div id="districts-container">
+    <label>
+        <input type="checkbox" id="select-all-districts">
+        همه ولسوالی‌ها
+    </label>
+    <div id="districts-list">
+        <!-- چک‌باکس‌های ولسوالی‌ها به‌صورت پویا در اینجا اضافه می‌شوند -->
+    </div>
+                    </div>
                     <div id="districtsContainer" class="districts hidden">
                         <h3>انتخاب ولسوالی‌ها</h3>
                         <div id="districtsList"></div>
