--- a/index.html
+++ b/index.html
@@ -3,69 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>بازار آنلاین افغانستان</title>
-    <link rel="stylesheet" href="style.css">
+    <title>بازار آنلاین</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="container">
-        <!-- سر برگ ها -->
-        <div class="sidebar">
-            <h2>بازار آنلاین</h2>
-            <ul class="tabs">
-                <li><a href="#" class="tab-link active" onclick="showTab('provinceTab')">انتخاب ولایت</a></li>
-                <li><a href="#" class="tab-link" onclick="showTab('categoriesTab')">دسته‌بندی‌ها</a></li>
-                <li><a href="#" class="tab-link" onclick="showTab('socialTab')">اجتماعی</a></li>
-                <li><a href="#" class="tab-link" onclick="showTab('employmentTab')">استخدام و کاریابی</a></li>
-                <!-- افزودن سر برگ‌های دیگر -->
-            </ul>
+    <header>
+        <div class="logo">
+            <h1>بازار آنلاین</h1>
         </div>
-
-        <!-- محتوا -->
-        <div class="content">
-            <!-- انتخاب ولایت -->
-            <div id="provinceTab" class="tab-content active">
-                <h2>انتخاب ولایت و ولسوالی</h2>
-                <div class="province-container">
-                    <select id="provinceSelect" onchange="loadDistricts()">
-                        <option value="" selected>انتخاب ولایت</option>
-                        <option value="kabul">کابل</option>
-                        <option value="herat">هرات</option>
-                        <option value="kandahar">قندهار</option>
-                        <option value="mazar">مزار شریف</option>
-                        <option value="takhar">تخار</option>
-                        <!-- سایر ولایات -->
-                    </select>
-                    <div id="districts-container">
-    <label>
-        <input type="checkbox" id="select-all-districts">
-        همه ولسوالی‌ها
-    </label>
-    <div id="districts-list">
-        <!-- چک‌باکس‌های ولسوالی‌ها به‌صورت پویا در اینجا اضافه می‌شوند -->
-    </div>
-                    </div>
-                    <div id="districtsContainer" class="districts hidden">
-                        <h3>انتخاب ولسوالی‌ها</h3>
-                        <div id="districtsList"></div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- سایر سر برگ‌ها -->
-            <div id="categoriesTab" class="tab-content">
-                <h2>دسته‌بندی‌ها</h2>
-                <p>این بخش در حال توسعه است.</p>
-            </div>
-            <div id="socialTab" class="tab-content">
-                <h2>اجتماعی</h2>
-                <p>این بخش در حال توسعه است.</p>
-            </div>
-            <div id="employmentTab" class="tab-content">
-                <h2>استخدام و کاریابی</h2>
-                <p>این بخش در حال توسعه است.</p>
-            </div>
+        <nav>
+            <input type="text" placeholder="جستجوی محصول یا خدمات...">
+            <button>جستجو</button>
+        </nav>
+    </header>
+    <main>
+        <h2>دسته‌بندی‌ها</h2>
+        <div class="categories">
+            <a href="search.html?category=املاک">املاک</a>
+            <a href="search.html?category=خودرو">خودرو</a>
+            <a href="search.html?category=الکترونیک">الکترونیک</a>
+            <a href="search.html?category=لوازم خانه">لوازم خانه</a>
         </div>
-    </div>
-    <script src="script.js"></script>
+    </main>
+    <footer>
+        <ul>
+            <li><a href="sign-in.html">ورود</a></li>
+            <li><a href="sign-up.html">ثبت‌نام</a></li>
+            <li><a href="post-ad.html">ثبت آگهی</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
