--- a/.html
+++ b/.html
@@ -1,1 +1,28 @@
-
+<!DOCTYPE html>
+<html lang="fa">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>جستجوی آگهی‌ها</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <header>
+        <h1>جستجوی آگهی‌ها</h1>
+        <nav>
+            <a href="index.html">صفحه اصلی</a>
+        </nav>
+    </header>
+    <main>
+        <h2>نتایج جستجو</h2>
+        <div class="ads">
+            <a href="ad.html?id=1">آگهی ۱</a>
+            <a href="ad.html?id=2">آگهی ۲</a>
+            <a href="ad.html?id=3">آگهی ۳</a>
+        </div>
+    </main>
+    <footer>
+        <p>© 2025 بازار آنلاین</p>
+    </footer>
+</body>
+</html>
