--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
             <button>جستجو</button>
         </nav>
     </header>
+    button id="hamburger">☰</button>
+
+    <!-- منو که شامل لینک‌هاست -->
+    <nav id="menu">
+        <ul>
+            <li><a href="#">صفحه اصلی</a></li>
+            <li><a href="#">درباره ما</a></li>
+            <li><a href="#">تماس با ما</a></li>
+        </ul>
+    </nav>
     <main>
         <h2>دسته‌بندی‌ها</h2>
         <div class="categories">
