--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <button>جستجو</button>
         </nav>
     </header>
-    button id="hamburger">☰</button>
+    <button id="hamburger">☰</button>
 
     <!-- منو که شامل لینک‌هاست -->
     <nav id="menu">
